# Sentinel

./: .coverage  .env.example  .gitignore  .pylintrc  CLAUDE.md  LeTWEET.ipynb  README.md  add_account.py  config.example.yaml  experiments.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
docs/: api.md  setup.md
notebooks/: exploration.ipynb
scripts/: categorize_errors.py  error_analysis.py  label_audit.py  recover_classifications.py
src/: __init__.py  _lint.py  bot_detector.py  cli.py  collector.py  config.py  experiment.py  news_fetcher.py  price_fetcher.py  scraper.py
src/api/: __init__.py  app.py  limiter.py  routes.py
src/data/: __init__.py  db.py  db_accounts.py  improved_labeler.py  labeler.py  models.py  stocks.py
src/features/: __init__.py  news_features.py  text_features.py
src/llm/: __init__.py  base.py  factory.py  google_client.py  openai_client.py
src/models/: __init__.py  baseline.py  classical.py  data.py  evaluate.py  features.py  neural.py
systemd/: sentinel-backend.service  sentinel.service
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/unit/: test_account_model.py  test_baseline.py  test_bot_detector.py  test_classical.py  test_collector.py  test_config.py  test_labeler.py  test_models.py  test_neural.py  test_news_features.py  test_news_fetcher.py  test_predict_proba.py  test_price_fetcher.py  test_stocks.py  test_text_features.py
tests/unit/llm/: __init__.py  test_google_client.py  test_openai_client.py
