[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel"
version = "1.0.0"
description = "Defense Stock Claim Analyzer — classifies social media claims about defense stocks as exaggerated, accurate, or understated."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "twscrape",
    "python-dotenv",
    "pyyaml",
    "yfinance",
    "ddgs",
    "python-dateutil>=2.9.0.post0",
    "flask",
    "flask-cors",
    "psycopg[binary]",
    "click",
    "gunicorn",
    "matplotlib>=3.10.8",
    "ipykernel>=7.2.0",
]

[project.scripts]
setup = "src.cli:setup"
collect = "src.cli:collect"
enrich = "src.cli:enrich"
serve = "src.cli:serve"
train = "src.cli:train"
evaluate = "src.cli:evaluate"
predict = "src.cli:predict"

[dependency-groups]
dev = [
    "pylint",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-cov",
    "pytest-timeout",
    "freezegun",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]
timeout = 60

[tool.coverage.run]
source = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
twscrape = { git = "https://github.com/Telesphoreo/twscrape.git" }
