[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel"
version = "1.0.0"
description = "Defense Stock Claim Analyzer — classifies social media claims about defense stocks as exaggerated, accurate, or understated."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "ddgs>=9.11.3",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "gunicorn>=25.1.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "psycopg[binary]>=3.3.3",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "twscrape",
    "yfinance>=1.2.0",
]

[project.scripts]
setup = "src.cli:setup"
collect = "src.cli:collect"
enrich = "src.cli:enrich"
serve = "src.cli:serve"
train = "src.cli:train"
evaluate = "src.cli:evaluate"
predict = "src.cli:predict"
lint = "src._lint:main"

[project.optional-dependencies]
dev = [
    "freezegun>=1.5.5",
    "pylint>=4.0.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]
timeout = 60

[tool.coverage.run]
source = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pylint.main]
recursive = true
source-roots = ["src", "tests"]

[tool.uv.sources]
twscrape = { git = "https://github.com/Telesphoreo/twscrape.git" }
